<resources>
    <string name="app_name">CARFAX</string>
    <string name="vehicle_description">Image of vehicle</string>
    <string name="call_dealer">CALL DEALER</string>
    <string name="location_details">Location:</string>
    <string name="interior_color_details">Interior Color:</string>
    <string name="exterior_color_details">Exterior Color:</string>
    <string name="drive_type_details">Drive Type:</string>
    <string name="transmission_details">Transmission:</string>
    <string name="engine_details">Engine:</string>
    <string name="body_style_details">Body Style:</string>
    <string name="vehicle_info">Vehicle Info</string>
</resources>