<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleDetailsActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivVehicleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvYearMakeModleDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivVehicleImage" />

        <TextView
            android:id="@+id/tvPriceDistDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvYearMakeModleDetails" />

        <TextView
            android:id="@+id/tvVehicleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/vehicle_info"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceDistDetails" />

        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/location_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVehicleInfo" />

        <TextView
            android:id="@+id/tvLocationDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvVehicleInfo" />

        <TextView
            android:id="@+id/lblExtColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/exterior_color_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblIntColor" />

        <TextView
            android:id="@+id/tvExColorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblExtColor"
            app:layout_constraintTop_toBottomOf="@+id/tvIntColorDetails" />

        <TextView
            android:id="@+id/lblIntColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/interior_color_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblLocation" />

        <TextView
            android:id="@+id/tvIntColorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblIntColor"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationDetails" />

        <TextView
            android:id="@+id/lblDriveType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/drive_type_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblExtColor" />

        <TextView
            android:id="@+id/tvDriveType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblDriveType"
            app:layout_constraintTop_toBottomOf="@+id/tvExColorDetails" />

        <TextView
            android:id="@+id/lblTransmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/transmission_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDriveType" />

        <TextView
            android:id="@+id/tvTransmissionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblTransmission"
            app:layout_constraintTop_toBottomOf="@+id/tvDriveType" />

        <TextView
            android:id="@+id/lblEngine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/engine_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTransmission" />

        <TextView
            android:id="@+id/tvEngineDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblEngine"
            app:layout_constraintTop_toBottomOf="@+id/tvTransmissionDetails" />

        <TextView
            android:id="@+id/lblBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/body_style_details"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEngine" />

        <TextView
            android:id="@+id/tvBodyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/lblBodyStyle"
            app:layout_constraintTop_toBottomOf="@+id/tvEngineDetails" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCallDealerDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/call_dealer"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBodyType" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
